k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-dev-service
spec:
  selector:
    app: laravel-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
