k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.yourdomain.com # Substitua pelo seu domínio de desenvolvimento
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-dev-service
                port:
                  number: 80
